--- a/primes.html
+++ b/primes.html
@@ -50,30 +50,50 @@
     </style>
 </head>
 <body>
-    <div id="primesContainer">
-        <span class="prime">2</span>
-    </div>
+    <div id="primesContainer"></div>
     <button id="nextButton">Next</button>
 
     <script>
-        const primes = [
-            2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71,
-            73, 79, 83, 89, 97, 101, 103, 107, 109, 113, 127, 131, 137, 139, 149, 151,
-            157, 163, 167, 173, 179, 181, 191, 193, 197, 199, 211, 223, 227, 229
-        ];
-        let currentIndex = 0;
+        let currentPrimeCount = 0;
+        const maxPrimes = 100;
+
+        // Function to check if a number is prime
+        function isPrime(num) {
+            if (num <= 1) return false;
+            for (let i = 2; i <= Math.sqrt(num); i++) {
+                if (num % i === 0) return false;
+            }
+            return true;
+        }
+
+        // Function to generate the next prime number starting from a given number
+        function generateNextPrime(start) {
+            let num = start;
+            while (true) {
+                if (isPrime(num)) return num;
+                num++;
+            }
+        }
 
         const primesContainer = document.getElementById('primesContainer');
         const nextButton = document.getElementById('nextButton');
 
         nextButton.addEventListener('click', () => {
-            currentIndex++;
-            if (currentIndex < primes.length) {
-                const newPrime = document.createElement('span');
-                newPrime.className = 'prime';
-                newPrime.textContent = primes[currentIndex];
-                primesContainer.appendChild(newPrime);
-            } else {
+            const primesToAdd = 10;  // Generate 10 primes per click
+            let num = currentPrimeCount ? parseInt(primesContainer.lastElementChild.textContent) + 1 : 2;
+
+            for (let i = 0; i < primesToAdd && currentPrimeCount < maxPrimes; i++) {
+                const prime = generateNextPrime(num);
+                const newPrimeElement = document.createElement('span');
+                newPrimeElement.className = 'prime';
+                newPrimeElement.textContent = prime;
+                primesContainer.appendChild(newPrimeElement);
+
+                currentPrimeCount++;
+                num = prime + 1;
+            }
+
+            if (currentPrimeCount >= maxPrimes) {
                 nextButton.disabled = true;
                 nextButton.textContent = 'No More Primes';
             }
