--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             <li><a href="caesar.html"> Caesar Cipher Tool</a></li>
             <li><a href="cmmc.html"> CMMC Level Inventory</a></li>
             <li><a href="cve.html"> CVE Database Search</a></li>
+            <li><a href="dnslookup.html"> DNS Simulation Tool</a></li>
             <li><a href="dora.html"> DHCP Simulation Tool</a></li>
             <li><a href="diffie.html"> Diffie-Hellman Key Exchange Color Simulation</a></li>
             <li><a href="firewall.html"> Stateful Firewall Simulator</a></li>
