--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <li><a href="cmmc.html"> CMMC Level Inventory</a></li>
             <li><a href="cve.html"> CVE Database Search</a></li>
             <li><a href="dnslookup.html"> DNS Simulation Tool</a></li>
+             <li><a href="dnsrecord.html"> DNS Record Generator</a></li>
             <li><a href="dora.html"> DHCP Simulation Tool</a></li>
             <li><a href="diffie.html"> Diffie-Hellman Key Exchange Color Simulation</a></li>
             <li><a href="firewall.html"> Stateful Firewall Simulator</a></li>
