--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             <li><a href="pid.html"> PID Controls - Flaps on a Commercial Airliner</a></li> 
             <li><a href="prime.html"> Prime Number Test</a></li> 
             <li><a href="primes.html"> Prime Number Generator</a></li> 
+            <li><a href="proportionsim.html"> Proportional Control Simulator</a></li> 
             <li><a href="proportional.html"> Proportional Control Paint Booth Oven</a></li> 
             <li><a href="protocols.html"> Protocol List</a></li> 
             <li><a href="rsa.html"> Using RSA to Generate Asymmetrical Keys</a></li>
