--- a/proportionsim.html
+++ b/proportionsim.html
@@ -59,6 +59,7 @@
             height: 300px;
             display: flex;
             justify-content: flex-start;
+            align-items: center;
         }
 
         #graph {
@@ -70,10 +71,8 @@
         }
 
         .scale {
-            position: absolute;
-            top: 0;
-            left: 0;
-            height: 300px;
+            position: relative;
+            height: 100%;
             width: 50px;
             display: flex;
             flex-direction: column;
