--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
             <li><a href="closedloop.html"> Closed Loop Control - HVAC System</a></li>
             <li><a href="hash.html"> Hashing Calculator</a></li>
             <li><a href="ipv6compression.html"> IP Version 6 Compression</a></li>   
-            <li><a href="modulus.html"> Modulus Math</a></li> 
+            <li><a href="uniform-motion.html"> Modulus Math</a></li> 
+            <li><a href="modulus.html"> Motion (uniform) Simulator</a></li> 
             <li><a href="nat.html"> NAT Translation</a></li>
             <li><a href="washer.html"> Open Loop Control - Washing Machine</a></li>
             <li><a href="osi.html"> OSI Model Flashcards</a></li>
