--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             <li><a href="osi.html"> OSI Model Flashcards</a></li>
             <li><a href="password.html"> Password Strength Analyzer</a></li>
             <li><a href="pid.html"> PID Controls - Flaps on a Commercial Airliner</a></li> 
+            <li><a href="primecount.html"> Prime Number Counter</a></li> 
             <li><a href="prime.html"> Prime Number Test</a></li> 
             <li><a href="primes.html"> Prime Number Generator</a></li> 
             <li><a href="proportionsim.html"> Proportional Control Simulator</a></li> 
