--- a/index.html
+++ b/index.html
@@ -80,13 +80,14 @@
              <li><a href="dhcppools.html"> DHCP Pool Configuration Tool</a></li>
             <li><a href="dora.html"> DHCP Simulation Tool</a></li>
             <li><a href="diffie.html"> Diffie-Hellman Key Exchange Color Simulation</a></li>
+            <li><a href="factors.html"> Factoring Tool </a></li>
             <li><a href="firewall.html"> Stateful Firewall Simulator</a></li>
             <li><a href="flashcard.html"> Flashcards</a></li>
             <li><a href="closedloop.html"> Closed Loop Control - HVAC System</a></li>
             <li><a href="hash.html"> Hashing Calculator</a></li>
             <li><a href="ipv6compression.html"> IP Version 6 Compression</a></li>   
-            <li><a href="uniform-motion.html"> Modulus Math</a></li> 
-            <li><a href="modulus.html"> Motion (uniform) Simulator</a></li> 
+            <li><a href="uniform-motion.html"> Motion Simulator</a></li> 
+            <li><a href="modulus.html"> Modulus Math Animator (uniform) Simulator</a></li> 
             <li><a href="nat.html"> NAT Translation</a></li>
             <li><a href="washer.html"> Open Loop Control - Washing Machine</a></li>
             <li><a href="osi.html"> OSI Model Flashcards</a></li>
