--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <li><a href="attackgame.html"> Cyber Attack Game</a></li>
             <li><a href="beam.html"> Beam Algorithm Simulator</a></li>
             <li><a href="binary.html"> Binary Game</a></li>
-            <li><a href="binaryop.html"> Binary Game</a></li>
+            <li><a href="binaryop.html"> Binary Register Operations</a></li>
             <li><a href="caesar.html"> Caesar Cipher Tool</a></li>
             <li><a href="cmmc.html"> CMMC Level Inventory</a></li>
             <li><a href="cve.html"> CVE Database Search</a></li>
