--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             <li><a href="flashcard.html"> Flashcards</a></li>
             <li><a href="closedloop.html"> Closed Loop Control - HVAC System</a></li>
             <li><a href="hash.html"> Hashing Calculator</a></li>
+            <li><a href="subnetcalc.html"> IP Version 4 Subnet Calculator</a></li>   
             <li><a href="ipv6compression.html"> IP Version 6 Compression</a></li>   
             <li><a href="uniform-motion.html"> Motion Simulator</a></li> 
             <li><a href="modulus.html"> Modulus Math Animator (uniform) Simulator</a></li> 
