--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <header>
         <div class="header-content">
             <div class="logo-container">
-                <img src="/api/placeholder/600/150" alt="NCYTE Center - National Cybersecurity Training & Education Center" class="logo">
+                <img src="/api/NCYTE_Logo.png/600/150" alt="NCYTE Center - National Cybersecurity Training & Education Center" class="logo">
             </div>
             <div class="header-text">
                 <h1>AI Course Resources Library</h1>
