--- a/index.html
+++ b/index.html
@@ -264,7 +264,24 @@
             <div class="resource-card">
                 <a href="primes.html" class="resource-link">Prime Numbers</a>
             </div>
-
+                 <div class="category-header">
+                <h2>Electronics Operational Amplifiers</h2>
+            </div>
+            <div class="resource-card">
+                <a href="opamp.html" class="resource-link">Operational Amplifiers Basics</a>
+            </div>
+            <div class="resource-card">
+                <a href="invert.html" class="resource-link">Inverting Operational Amplifiers</a>
+            </div>
+            <div class="resource-card">
+                <a href="non-invert.html" class="resource-link">Non-Inverting Operational Amplifiers</a>
+            </div>
+            <div class="resource-card">
+                <a href="compopamp.html" class="resource-link">Operational Amplifier Configured as a Comparitor</a>
+            </div>
+            <div class="resource-card">
+                <a href="difopamp.html" class="resource-link">Operational Amplifier Configured as a Differentiator</a>
+            </div>
             <div class="category-header">
                 <h2>Physics & Control Systems</h2>
             </div>
