--- a/invert.html
+++ b/invert.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Non-Inverting Op-Amp Simulator</title>
+    <title>Inverting Op-Amp Simulator</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,15 +23,15 @@
     </style>
 </head>
 <body>
-    <h1>Non-Inverting Op-Amp Simulator</h1>
+    <h1>Inverting Op-Amp Simulator</h1>
     <div class="controls">
         <label>Vin (V): <input type="number" id="vin" value="1" min="0" max="5" step="0.1" onchange="updateSim()"></label>
         <label>Rf (kΩ): <input type="number" id="rf" value="10" min="1" max="100" step="1" onchange="updateSim()"></label>
-        <label>Rg (kΩ): <input type="number" id="rg" value="10" min="1" max="100" step="1" onchange="updateSim()"></label>
+        <label>Rin (kΩ): <input type="number" id="rin" value="10" min="1" max="100" step="1" onchange="updateSim()"></label>
     </div>
     <div>
-        <p>Gain: <span id="gain">2</span></p>
-        <p>Vout: <span id="vout">2</span> V</p>
+        <p>Gain: <span id="gain">-1</span></p>
+        <p>Vout: <span id="vout">-1</span> V</p>
     </div>
     <canvas id="waveform" width="600" height="300"></canvas>
 
@@ -40,15 +40,15 @@
         const ctx = canvas.getContext('2d');
         const vinInput = document.getElementById('vin');
         const rfInput = document.getElementById('rf');
-        const rgInput = document.getElementById('rg');
+        const rinInput = document.getElementById('rin');
         const gainOutput = document.getElementById('gain');
         const voutOutput = document.getElementById('vout');
 
         function calculateOutput() {
             const vin = parseFloat(vinInput.value);
             const rf = parseFloat(rfInput.value) * 1000; // Convert kΩ to Ω
-            const rg = parseFloat(rgInput.value) * 1000; // Convert kΩ to Ω
-            const gain = 1 + rf / rg;
+            const rin = parseFloat(rinInput.value) * 1000; // Convert kΩ to Ω
+            const gain = -rf / rin; // Negative gain for inverting configuration
             const vout = vin * gain;
 
             gainOutput.textContent = gain.toFixed(2);
@@ -79,11 +79,11 @@
             }
             ctx.stroke();
 
-            // Draw output sine wave (red)
+            // Draw output sine wave (red), inverted
             ctx.beginPath();
             ctx.strokeStyle = 'red';
             for (let x = 0; x < canvas.width - 100; x++) {
-                const y = Math.sin(x * 0.05) * vout * 50; // Scale for visibility
+                const y = Math.sin(x * 0.05) * vout * 50; // Scale for visibility, inverted by gain
                 if (x === 0) ctx.moveTo(x + 50, canvas.height / 2 - y);
                 else ctx.lineTo(x + 50, canvas.height / 2 - y);
             }
