--- a/index.html
+++ b/index.html
@@ -282,6 +282,13 @@
             <div class="resource-card">
                 <a href="difopamp.html" class="resource-link">Operational Amplifier Configured as a Differentiator</a>
             </div>
+                        <div class="resource-card">
+                <a href="follower.html" class="resource-link">Operational Amplifier Configured as a Voltage Follower</a>
+            </div>
+                        <div class="resource-card">
+                <a href="integrator.html" class="resource-link">Operational Amplifier Configured as a Integrator</a>
+            </div>
+            
             <div class="category-header">
                 <h2>Physics & Control Systems</h2>
             </div>
