--- a/usmap.html
+++ b/usmap.html
@@ -58,10 +58,7 @@
 <body>
   <h1>Click States You Have Visited</h1>
   <div id="map-container">
-    <svg id="us-map" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 959 593">
-      <path id="CA" d="M150,300 L170,310 L160,330 Z" title="California" />
-      <path id="TX" d="M400,400 L420,420 L410,440 Z" title="Texas" />
-      <path id="NY" d="M800,100 L820,110 L810,130 Z" title="New York" />
+    <svg id="us-map"USMAP.svg" viewBox="0 0 959 593">
     </svg>
   </div>
   <div id="controls">
