--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 <a href="modulus.html" class="resource-link">Modulus Math</a>
             </div>
             <div class="resource-card">
-                <a href="prime.html" class="resource-link">Prime Number Study Guide</a>
+                <a href="primenumbertools.html" class="resource-link">Prime Number Study Tools</a>
             </div>
             <div class="resource-card">
                 <a href="primecount.html" class="resource-link">Prime Number Count</a>
