--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
         <div class="resource-card"><a href="primes.html" class="resource-link">List of Primes</a></div>
         <div class="resource-card"><a href="factors.html" class="resource-link">Factors Calculator</a></div>
         <div class="resource-card"><a href="modulus.html" class="resource-link">Modulus Calculator</a></div>
-
+        <div class="resource-card"><a href="moduluscounter.html" class="resource-link">Modulus Counter</a></div>
+        
         <div class="category-header">
             <h2>Learning Activities & Simulations</h2>
         </div>
