--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         <div class="resource-card"><a href="modulus.html" class="resource-link">Modulus Calculator</a></div>
         <div class="resource-card"><a href="moduluscounter.html" class="resource-link">Modulus Counter</a></div>
         <div class="resource-card"><a href="updown.html" class="resource-link">4-Bit UpDown Counter</a></div>
+        <div class="resource-card"><a href="johnson.html" class="resource-link">4-Bit Johnson Counter</a></div>
         
         <div class="category-header">
             <h2>Learning Activities & Simulations</h2>
