--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
         <div class="resource-card"><a href="rubric.html" class="resource-link">Grading Rubric Generator</a></div>
         <div class="resource-card"><a href="plan.html" class="resource-link">Planning Assistant</a></div>
         <div class="resource-card"><a href="numbersystems.html" class="resource-link">Number Systems</a></div>
+        <div class="resource-card"><a href="genotype.html" class="resource-link">Interactive Punnett Table</a></div>
         <div class="resource-card"><a href="usmap.html" class="resource-link">Interactive US Map</a></div>
 
     </div>
