--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
         <div class="resource-card"><a href="CareerExploration.html" class="resource-link">Career Exploration Tool</a></div>
         <div class="resource-card"><a href="Integrator.html" class="resource-link">Integrator App</a></div>
         <div class="resource-card"><a href="atod.html" class="resource-link">Analog to Digital Simulation</a></div>
-
+ <      <div class="resource-card"><a href="a-to-d.html" class="resource-link">Analog to Digital Converter</a></div>
+       
+        
         <div class="category-header">
             <h2>Protocols & Email Services</h2>
         </div>
