--- a/careerplanner.html
+++ b/careerplanner.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
+            background: linear-gradient(135deg, #1e4d2b 0%, #2d7635 100%);
             min-height: 100vh;
             color: #333;
         }
@@ -34,7 +34,7 @@
         }
 
         .header h1 {
-            color: #2a5298;
+            color: #2d7635;
             font-size: 2.5em;
             margin-bottom: 10px;
             font-weight: 700;
@@ -51,7 +51,7 @@
             padding: 15px;
             border-radius: 10px;
             margin-top: 20px;
-            border-left: 5px solid #2a5298;
+            border-left: 5px solid #2d7635;
         }
 
         .planner-grid {
@@ -74,7 +74,7 @@
         }
 
         .section h2 {
-            color: #2a5298;
+            color: #2d7635;
             margin-bottom: 20px;
             font-size: 1.5em;
             padding-bottom: 10px;
@@ -103,8 +103,8 @@
 
         select:focus, input[type="text"]:focus {
             outline: none;
-            border-color: #2a5298;
-            box-shadow: 0 0 0 3px rgba(42, 82, 152, 0.1);
+            border-color: #2d7635;
+            box-shadow: 0 0 0 3px rgba(45, 118, 53, 0.1);
         }
 
         .checkbox-grid {
@@ -161,7 +161,7 @@
         }
 
         .pref-group h4 {
-            color: #2a5298;
+            color: #2d7635;
             margin-bottom: 10px;
             font-size: 1em;
         }
@@ -174,7 +174,7 @@
         }
 
         .summary h2 {
-            color: #2a5298;
+            color: #2d7635;
             margin-bottom: 20px;
             text-align: center;
         }
@@ -184,11 +184,11 @@
             margin: 10px 0;
             padding: 15px;
             border-radius: 8px;
-            border-left: 4px solid #2a5298;
+            border-left: 4px solid #2d7635;
         }
 
         .summary-item h4 {
-            color: #2a5298;
+            color: #2d7635;
             margin-bottom: 8px;
         }
 
@@ -217,7 +217,7 @@
         }
 
         .required-courses h4 {
-            color: #2a5298;
+            color: #2d7635;
             margin-bottom: 10px;
         }
 
