Update welcome section with image and text changes

--- a/hamlet.html
+++ b/hamlet.html
@@ -99,10 +99,14 @@
 
         <main id="content-container">
 
-            <section id="welcome" class="content-section space-y-6">
+             <section id="welcome" class="content-section space-y-6">
                 <h2 class="text-3xl font-bold text-amber-800 mb-4">"To be, or not to be..."</h2>
                 <div class="bg-white p-6 rounded-lg shadow-lg space-y-4 text-lg">
-                    <p>Welcome to this interactive guide to *Hamlet*. This lesson is designed to help you navigate the complex world of Elsinore, from its corrupt court to the minds of its tragic figures. Written around 1600, *Hamlet* is not just a simple revenge story; it's a profound exploration of madness, morality, and the human condition.</p>
+                    <figure class="mx-auto max-w-sm">
+                        <img src="hamlet.png" alt="Portrait of Hamlet" class="w-full rounded-md shadow-md" loading="lazy">
+                        <figcaption class="text-center text-sm text-stone-500 mt-2">Portrait associated with Hamlet</figcaption>
+                    </figure>
+                    <p>Welcome to this interactive guide to <em>Hamlet</em>. This lesson is designed to help you navigate the complex world of Elsinore, from its corrupt court to the minds of its tragic figures. Written around 1600, <em>Hamlet</em> is not just a simple revenge story; it's a profound exploration of madness, morality, and the human condition.</p>
                     <p>Use the navigation tabs above to dive into the key components of the play:</p>
                     <ul class="list-disc list-inside ml-4 space-y-2">
                         <li><strong class="font-medium text-amber-800">Characters:</strong> Meet the play's major figures and analyze their motivations.</li>
