--- a/hamlet.html
+++ b/hamlet.html
@@ -104,7 +104,7 @@
                 <div class="bg-white p-6 rounded-lg shadow-lg space-y-4 text-lg">
                     <figure class="mx-auto max-w-sm">
                         <img src="hamlet.png" alt="Portrait of Hamlet" class="w-full rounded-md shadow-md" loading="lazy">
-                        <figcaption class="text-center text-sm text-stone-500 mt-2">Portrait associated with Hamlet</figcaption>
+                        <figcaption class="text-center text-sm text-stone-500 mt-2">Hamlet Characters</figcaption>
                     </figure>
                     <p>Welcome to this interactive guide to <em>Hamlet</em>. This lesson is designed to help you navigate the complex world of Elsinore, from its corrupt court to the minds of its tragic figures. Written around 1600, <em>Hamlet</em> is not just a simple revenge story; it's a profound exploration of madness, morality, and the human condition.</p>
                     <p>Use the navigation tabs above to dive into the key components of the play:</p>
