--- a/repository-index.html
+++ b/repository-index.html
@@ -209,12 +209,13 @@
         <div class="section">
             <h2>💻 Computer Science & Systems</h2>
             <div class="file-grid">
-                <a href="171.html" class="file-link"><div class="file-name">CIS 171</div><div class="file-desc">Computer Science 171</div></a>
+                <a href="171.html" class="file-link"><div class="file-name">CIS 171</div><div class="file-desc">Computer Science 171</div></a>                  <a href="accuracy.html" class="file-link"><div class="file-name">Accuracy Testing</div><div class="file-desc">Algorithm Accuracy</div></a>
                 <a href="accuracy.html" class="file-link"><div class="file-name">Accuracy Testing</div><div class="file-desc">Algorithm Accuracy</div></a>
+                <a href="plotting.html" class="file-link"><div class="file-name">X-Y Plotting</div><div class="file-desc">X-Y Plotting Tool</div></a>
                 <a href="activity.html" class="file-link"><div class="file-name">Activity Log</div><div class="file-desc">System Activity Monitor</div></a>
                 <a href="commands.html" class="file-link"><div class="file-name">Command Reference</div><div class="file-desc">System Commands</div></a>
                 <a href="linux.html" class="file-link"><div class="file-name">Linux</div><div class="file-desc">Linux Operating System</div></a>
-                <a href="plan.html" class="file-link"><div class="file-name">Project Planning</div><div class="file-desc">Project Planning Tool</div></a>
+                <a href="plan.html" class="file-link"><div class="file-name">Student Academic Plan</div><div class="file-desc">Student Academic Plan Tool</div></a>
                 <a href="testing.html" class="file-link"><div class="file-name">Software Testing</div><div class="file-desc">Testing Methodologies</div></a>
                 <a href="washer.html" class="file-link"><div class="file-name">Washer Method</div><div class="file-desc">Volume Calculation</div></a>
             </div>
@@ -249,7 +250,6 @@
                 <a href="physics_101_motion.html" class="file-link"><div class="file-name">Physics 101 Motion</div><div class="file-desc">Motion Physics</div></a>
                 <a href="punnett.html" class="file-link"><div class="file-name">Punnett Square</div><div class="file-desc">Genetics Calculator</div></a>
                 <a href="uniform-motion.html" class="file-link"><div class="file-name">Uniform Motion</div><div class="file-desc">Kinematics Study</div></a>
-                <a href="usmap.html" class="file-link"><div class="file-name">US Map</div><div class="file-desc">United States Geography</div></a>
             </div>
         </div>
 
@@ -266,16 +266,14 @@
             <div class="file-grid">
                 <a href="flashcard.html" class="file-link"><div class="file-name">Flashcards</div><div class="file-desc">Study Flashcard System</div></a>
                 <a href="rubric.html" class="file-link"><div class="file-name">Rubric Generator</div><div class="file-desc">Assessment Rubrics</div></a>
-                <a href="survey.html" class="file-link"><div class="file-name">Survey Tool</div><div class="file-desc">Survey Creation</div></a>
-                <a href="index.html" class="file-link"><div class="file-name">Main Index</div><div class="file-desc">Repository Home Page</div></a>
-                <a href="indexv1.html" class="file-link"><div class="file-name">Index v1</div><div class="file-desc">Legacy Index Page</div></a>
+                <a href="survey.html" class="file-link"><div class="file-name">Survey Tool</div><div class="file-desc">Survey Creation</div></a>     
             </div>
         </div>
 
         <div class="section">
             <h2>🔧 Miscellaneous Resources</h2>
             <div class="file-grid">
-                <a href="README.md" class="file-link"><div class="file-name">README</div><div class="file-desc">Repository Documentation</div></a>
+               <a href="bio.html" class="file-link"><div class="file-name">Instructor Profile</div><div class="file-desc">Instructor Profile</div></a> 
             </div>
         </div>
 
