--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <div class="section">
             <h2>💻 Computer Science & Systems</h2>
             <div class="file-grid">
-                <a href="171.html" class="file-link"><div class="file-name">CIS 171</div><div class="file-desc">Computer Science 171</div></a>                  <a href="accuracy.html" class="file-link"><div class="file-name">Accuracy Testing</div><div class="file-desc">Algorithm Accuracy</div></a>
+                <a href="171.html" class="file-link"><div class="file-name">NIST 800-171</div><div class="file-desc">NIST DoD CMMC Framework</div></a>                  <a href="accuracy.html" class="file-link"><div class="file-name">Accuracy Testing</div><div class="file-desc">Algorithm Accuracy</div></a>
                 <a href="accuracy.html" class="file-link"><div class="file-name">Accuracy Testing</div><div class="file-desc">Algorithm Accuracy</div></a>
                 <a href="plotting.html" class="file-link"><div class="file-name">X-Y Plotting</div><div class="file-desc">X-Y Plotting Tool</div></a>
                 <a href="activity.html" class="file-link"><div class="file-name">Activity Log</div><div class="file-desc">System Activity Monitor</div></a>
@@ -217,6 +217,7 @@
                 <a href="linux.html" class="file-link"><div class="file-name">Linux</div><div class="file-desc">Linux Operating System</div></a>
                 <a href="plan.html" class="file-link"><div class="file-name">Student Academic Plan</div><div class="file-desc">Student Academic Plan Tool</div></a>
                 <a href="testing.html" class="file-link"><div class="file-name">Software Testing</div><div class="file-desc">Testing Methodologies</div></a>
+                <a href="https://hafeezfaridi.github.io/AI-learning/GABA.html" class="file-link"><div class="file-name">NeuroSim: Seizure Pathophysiology</div><div class="file-desc">NeuroSim: Seizure Pathophysiology</div></a>
                 <a href="washer.html" class="file-link"><div class="file-name">Washer Method</div><div class="file-desc">Volume Calculation</div></a>
             </div>
         </div>
