Update repository title and subtitle in index.html

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>🎓 MVCC Repository Index</h1>
-        <p class="subtitle">Moraine Valley Community College - Educational Resources</p>
+        <h1>🎓 NCYTYE AI Repository Index</h1>
+        <p class="subtitle">AI Generated Repository - Educational Resources</p>
         
         <div class="stats">
             <p>Total Resources: <span>135+</span> Interactive Learning Tools</p>
