Fix heading text in index.html

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🎓 NCYTYE AI Repository Index</h1>
+        <h1>🎓 NCYTE AI Repository Index</h1>
         <p class="subtitle">AI Generated Repository - Educational Resources</p>
         
         <div class="stats">
