Add new links for health sciences and manufacturing

--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
         <div class="section">
             <h2>🌐 Networking Protocols & Technologies</h2>
             <div class="file-grid">
+                 <a href="subnetcalc.html" class="file-link"><div class="file-name">Subnet Calculator</div><div class="file-desc">IPv4 Subnet Calculator</div></a>
+                <a href="classcsubnet.html" class="file-link"><div class="file-name">Class C Subnetting</div><div class="file-desc">Class C Subnet Practice</div></a>
+                 <a href="caesar.html" class="file-link"><div class="file-name">Caesar Cipher</div><div class="file-desc">Classical Encryption Method</div></a>
                 <a href="arp.html" class="file-link"><div class="file-name">ARP</div><div class="file-desc">Address Resolution Protocol</div></a>
                 <a href="arpsim.html" class="file-link"><div class="file-name">ARP Simulator</div><div class="file-desc">ARP Simulation Tool</div></a>
                 <a href="dhcp.html" class="file-link"><div class="file-name">DHCP</div><div class="file-desc">Dynamic Host Configuration</div></a>
@@ -156,11 +159,12 @@
         </div>
 
         <div class="section">
-            <h2>📡 Subnetting & IP Addressing</h2>
+            <h2>📡 Health Sciences</h2>
             <div class="file-grid">
-                <a href="subnetcalc.html" class="file-link"><div class="file-name">Subnet Calculator</div><div class="file-desc">IPv4 Subnet Calculator</div></a>
-                <a href="classcsubnet.html" class="file-link"><div class="file-name">Class C Subnetting</div><div class="file-desc">Class C Subnet Practice</div></a>
-                 <a href="caesar.html" class="file-link"><div class="file-name">Caesar Cipher</div><div class="file-desc">Classical Encryption Method</div></a>
+            <a href="https://hafeezfaridi.github.io/AI-learning/GABA.html" class="file-link"><div class="file-name">Syslog</div><div class="file-desc">NeuroSim:Seizure Pathophysiology</div></a>
+            <a href="https://hafeezfaridi.github.io/AI-learning/Lidocaine.html" class="file-link"><div class="file-name">Syslog</div><div class="file-desc">Pharmacology Lab:Lidocaine Mode of Action</div></a>
+            <a href="punnett.html" class="file-link"><div class="file-name">Punnett Square</div><div class="file-desc">Genetics Calculator</div></a>
+            <a href="bloodpressure.html" class="file-link"><div class="file-name">Blood Pressure</div><div class="file-desc">BP Monitoring</div></a>
             </div>
         </div>
 
@@ -245,12 +249,18 @@
         </div>
 
         <div class="section">
-            <h2>🧬 Science & Health</h2>
+            <h2>🧬 Manufacturing</h2>
             <div class="file-grid">
-                <a href="bloodpressure.html" class="file-link"><div class="file-name">Blood Pressure</div><div class="file-desc">BP Monitoring</div></a>
-                <a href="physics_101_motion.html" class="file-link"><div class="file-name">Physics 101 Motion</div><div class="file-desc">Motion Physics</div></a>
-                <a href="punnett.html" class="file-link"><div class="file-name">Punnett Square</div><div class="file-desc">Genetics Calculator</div></a>
-                <a href="uniform-motion.html" class="file-link"><div class="file-name">Uniform Motion</div><div class="file-desc">Kinematics Study</div></a>
+                 <a href="https://sands-mvcc.github.io/ot/actuators.html" class="file-link"><div class="file-name">RFID Tracking</div><div class="file-desc">System Message Generation</div></a>
+                  <a href="https://sands-mvcc.github.io/ot/actuators.html" class="file-link"><div class="file-name">Edge Devices</div><div class="file-desc">Edge Computing Simulation</div></a>
+                  <a href="https://sands-mvcc.github.io/ot/actuators.html" class="file-link"><div class="file-name">Gateway Protocol Translation</div><div class="file-desc">Industrial Gateways</div></a>
+                  <a href="https://sands-mvcc.github.io/ot/actuators.html" class="file-link"><div class="file-name">Equipment Health Monitoring</div><div class="file-desc">Condition Monitoring Systems</div></a>
+                  <a href="https://sands-mvcc.github.io/ot/actuators.html" class="file-link"><div class="file-name">Real-Time Asset Tracking</div><div class="file-desc">Asset Tracking & RTLS</div></a>
+                  <a href="https://sands-mvcc.github.io/ot/ics.html" class="file-link"><div class="file-name">ICS Automated Bottle Filling & Capping Simulator</div><div class="file-desc">Simulator</div></a>
+                  <a href="https://sands-mvcc.github.io/ot/syslog.html" class="file-link"><div class="file-name">SYSLOG Protocol Interactive Training Tool</div><div class="file-desc">SysLog Trainer</div></a>
+                  <a href="https://sands-mvcc.github.io/ot/cascade.html" class="file-link"><div class="file-name">Cascade Valley Electric Cooperative</div><div class="file-desc">Case Study</div></a>
+                  <a href="physics_101_motion.html" class="file-link"><div class="file-name">Physics 101 Motion</div><div class="file-desc">Motion Physics</div></a>
+                  <a href="uniform-motion.html" class="file-link"><div class="file-name">Uniform Motion</div><div class="file-desc">Kinematics Study</div></a>
             </div>
         </div>
 
