Update links and descriptions for health sciences section

--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
         <div class="section">
             <h2>📡 Health Sciences</h2>
             <div class="file-grid">
-            <a href="https://hafeezfaridi.github.io/AI-learning/GABA.html" class="file-link"><div class="file-name">Syslog</div><div class="file-desc">NeuroSim:Seizure Pathophysiology</div></a>
-            <a href="https://hafeezfaridi.github.io/AI-learning/Lidocaine.html" class="file-link"><div class="file-name">Syslog</div><div class="file-desc">Pharmacology Lab:Lidocaine Mode of Action</div></a>
+            <a href="https://hafeezfaridi.github.io/AI-learning/GABA.html" class="file-link"><div class="file-name">Seizures</div><div class="file-desc">NeuroSim:Seizure Pathophysiology</div></a>
+            <a href="https://hafeezfaridi.github.io/AI-learning/Lidocaine.html" class="file-link"><div class="file-name">Lidocaine Application</div><div class="file-desc">Pharmacology Lab:Lidocaine Mode of Action</div></a>
             <a href="punnett.html" class="file-link"><div class="file-name">Punnett Square</div><div class="file-desc">Genetics Calculator</div></a>
             <a href="bloodpressure.html" class="file-link"><div class="file-name">Blood Pressure</div><div class="file-desc">BP Monitoring</div></a>
             </div>
