--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                 <a href="cracker.html" class="file-link"><div class="file-name">Password Cracker</div><div class="file-desc">Password Security Analysis</div></a>
                 <a href="cve.html" class="file-link"><div class="file-name">CVE</div><div class="file-desc">Common Vulnerabilities</div></a>
                 <a href="cybercerts.html" class="file-link"><div class="file-name">Cyber Certifications</div><div class="file-desc">Security Certifications Guide</div></a>
+                <a href="https://sands-mvcc.github.io/CMMC/roles.html" class="file-link"><div class="file-name">Data Security Roles</div><div class="file-desc">Formal Data Security Roles</div></a> 
                 <a href="diffie.html" class="file-link"><div class="file-name">Diffie-Hellman</div><div class="file-desc">Key Exchange Algorithm</div></a>
                 <a href="epnc_dashboard.html" class="file-link"><div class="file-name">EPNC Dashboard</div><div class="file-desc">Cybersecurity Dashboard</div></a>
                 <a href="epnc_pres.html" class="file-link"><div class="file-name">EPNC Presentation</div><div class="file-desc">EPNC Overview</div></a>
@@ -123,9 +124,8 @@
         <div class="section">
             <h2>🌐 Networking Protocols & Technologies</h2>
             <div class="file-grid">
-                 <a href="subnetcalc.html" class="file-link"><div class="file-name">Subnet Calculator</div><div class="file-desc">IPv4 Subnet Calculator</div></a>
                 <a href="classcsubnet.html" class="file-link"><div class="file-name">Class C Subnetting</div><div class="file-desc">Class C Subnet Practice</div></a>
-                 <a href="caesar.html" class="file-link"><div class="file-name">Caesar Cipher</div><div class="file-desc">Classical Encryption Method</div></a>
+                <a href="caesar.html" class="file-link"><div class="file-name">Caesar Cipher</div><div class="file-desc">Classical Encryption Method</div></a>
                 <a href="arp.html" class="file-link"><div class="file-name">ARP</div><div class="file-desc">Address Resolution Protocol</div></a>
                 <a href="arpsim.html" class="file-link"><div class="file-name">ARP Simulator</div><div class="file-desc">ARP Simulation Tool</div></a>
                 <a href="dhcp.html" class="file-link"><div class="file-name">DHCP</div><div class="file-desc">Dynamic Host Configuration</div></a>
@@ -152,19 +152,21 @@
                 <a href="rdp.html" class="file-link"><div class="file-name">RDP</div><div class="file-desc">Remote Desktop Protocol</div></a>
                 <a href="smtp.html" class="file-link"><div class="file-name">SMTP</div><div class="file-desc">Simple Mail Transfer</div></a>
                 <a href="stp.html" class="file-link"><div class="file-name">STP</div><div class="file-desc">Spanning Tree Protocol</div></a>
+                <a href="subnetcalc.html" class="file-link"><div class="file-name">Subnet Calculator</div><div class="file-desc">IPv4 Subnet Calculator</div></a>
+                <a href="syslog.html" class="file-link"><div class="file-name">Syslog</div><div class="file-desc">System Logging Protocol</div></a>
                 <a href="tcp.html" class="file-link"><div class="file-name">TCP</div><div class="file-desc">Transmission Control Protocol</div></a>
                 <a href="udp.html" class="file-link"><div class="file-name">UDP</div><div class="file-desc">User Datagram Protocol</div></a>
-                <a href="syslog.html" class="file-link"><div class="file-name">Syslog</div><div class="file-desc">System Logging Protocol</div></a>
             </div>
         </div>
 
         <div class="section">
             <h2>📡 Health Sciences</h2>
             <div class="file-grid">
-            <a href="https://hafeezfaridi.github.io/AI-learning/GABA.html" class="file-link"><div class="file-name">Seizures</div><div class="file-desc">NeuroSim:Seizure Pathophysiology</div></a>
+            <a href="bloodpressure.html" class="file-link"><div class="file-name">Blood Pressure</div><div class="file-desc">BP Monitoring</div></a>
             <a href="https://hafeezfaridi.github.io/AI-learning/Lidocaine.html" class="file-link"><div class="file-name">Lidocaine Application</div><div class="file-desc">Pharmacology Lab:Lidocaine Mode of Action</div></a>
             <a href="punnett.html" class="file-link"><div class="file-name">Punnett Square</div><div class="file-desc">Genetics Calculator</div></a>
-            <a href="bloodpressure.html" class="file-link"><div class="file-name">Blood Pressure</div><div class="file-desc">BP Monitoring</div></a>
+            <a href="https://hafeezfaridi.github.io/AI-learning/GABA.html" class="file-link"><div class="file-name">Seizures</div><div class="file-desc">NeuroSim:Seizure Pathophysiology</div></a>
+            <a href="stroke.html" class="file-link"><div class="file-name">Stroke Study Guide</div><div class="file-desc">Stroke Interactive Study Guide</div></a>      
             </div>
         </div>
 
@@ -178,7 +180,6 @@
                 <a href="closedloop.html" class="file-link"><div class="file-name">Closed Loop Systems</div><div class="file-desc">Closed Loop Control</div></a>
                 <a href="compopamp.html" class="file-link"><div class="file-name">Comparator Op-Amp</div><div class="file-desc">Op-Amp Comparator</div></a>
                 <a href="difopamp.html" class="file-link"><div class="file-name">Differential Op-Amp</div><div class="file-desc">Differential Amplifier</div></a>
-                <a href="fire.html" class="file-link"><div class="file-name">Fire Safety</div><div class="file-desc">Electrical Fire Safety</div></a>
                 <a href="follower.html" class="file-link"><div class="file-name">Voltage Follower</div><div class="file-desc">Unity Gain Buffer</div></a>
                 <a href="integrator.html" class="file-link"><div class="file-name">Integrator Circuit</div><div class="file-desc">Op-Amp Integrator</div></a>
                 <a href="Integrator.html" class="file-link"><div class="file-name">Integrator (Alt)</div><div class="file-desc">Alternative Integrator</div></a>
@@ -200,29 +201,32 @@
             <div class="file-grid">
                 <a href="binary.html" class="file-link"><div class="file-name">Binary Numbers</div><div class="file-desc">Binary Number System</div></a>
                 <a href="binaryop.html" class="file-link"><div class="file-name">Binary Operations</div><div class="file-desc">Binary Arithmetic</div></a>
+                <a href="engnotation.html" class="file-link"><div class="file-name">Engineering Notation Activity</div><div class="file-desc">Engineering Notation Lab</div></a>
                 <a href="factors.html" class="file-link"><div class="file-name">Factors</div><div class="file-desc">Prime Factorization</div></a>
                 <a href="numbersystems.html" class="file-link"><div class="file-name">Number Systems</div><div class="file-desc">Multiple Base Systems</div></a>
+                <a href="plotting.html" class="file-link"><div class="file-name">Coordinate Plotting Activity</div><div class="file-desc">Plotting X-Y Coordinates</div></a>
                 <a href="prime.html" class="file-link"><div class="file-name">Prime Numbers</div><div class="file-desc">Prime Number Theory</div></a>
                 <a href="primecount.html" class="file-link"><div class="file-name">Prime Counter</div><div class="file-desc">Count Prime Numbers</div></a>
                 <a href="primenumbertools.html" class="file-link"><div class="file-name">Prime Number Tools</div><div class="file-desc">Prime Utilities</div></a>
                 <a href="primes.html" class="file-link"><div class="file-name">Primes Overview</div><div class="file-desc">Prime Number Overview</div></a>
-                <a href="PrimeNumbers" class="file-link"><div class="file-name">Prime Numbers File</div><div class="file-desc">Prime Numbers Resource</div></a>
+                <a href="PrimeNumbers.html" class="file-link"><div class="file-name">Prime Numbers File</div><div class="file-desc">Prime Numbers Resource</div></a>
+                <a href="scinotation.html" class="file-link"><div class="file-name">Scientific Notation Activity</div><div class="file-desc">Scientific Notation Lab</div></a>
+                <a href="statistics.html" class="file-link"><div class="file-name">Descriptive Stats</div><div class="file-desc">Asteroid Miner</div></a>
             </div>
         </div>
 
         <div class="section">
             <h2>💻 Computer Science & Systems</h2>
             <div class="file-grid">
-                <a href="171.html" class="file-link"><div class="file-name">NIST 800-171</div><div class="file-desc">NIST DoD CMMC Framework</div></a>                  <a href="accuracy.html" class="file-link"><div class="file-name">Accuracy Testing</div><div class="file-desc">Algorithm Accuracy</div></a>
+                <a href="171.html" class="file-link"><div class="file-name">NIST 800-171</div><div class="file-desc">NIST DoD CMMC Framework</div></a>                  
                 <a href="accuracy.html" class="file-link"><div class="file-name">Accuracy Testing</div><div class="file-desc">Algorithm Accuracy</div></a>
-                <a href="plotting.html" class="file-link"><div class="file-name">X-Y Plotting</div><div class="file-desc">X-Y Plotting Tool</div></a>
+                <a href="accuracy.html" class="file-link"><div class="file-name">Accuracy Testing</div><div class="file-desc">Algorithm Accuracy</div></a>
                 <a href="activity.html" class="file-link"><div class="file-name">Activity Log</div><div class="file-desc">System Activity Monitor</div></a>
                 <a href="commands.html" class="file-link"><div class="file-name">Command Reference</div><div class="file-desc">System Commands</div></a>
                 <a href="linux.html" class="file-link"><div class="file-name">Linux</div><div class="file-desc">Linux Operating System</div></a>
                 <a href="plan.html" class="file-link"><div class="file-name">Student Academic Plan</div><div class="file-desc">Student Academic Plan Tool</div></a>
                 <a href="testing.html" class="file-link"><div class="file-name">Software Testing</div><div class="file-desc">Testing Methodologies</div></a>
-                <a href="https://hafeezfaridi.github.io/AI-learning/GABA.html" class="file-link"><div class="file-name">NeuroSim: Seizure Pathophysiology</div><div class="file-desc">NeuroSim: Seizure Pathophysiology</div></a>
-                <a href="washer.html" class="file-link"><div class="file-name">Washer Method</div><div class="file-desc">Volume Calculation</div></a>
+               
             </div>
         </div>
 
@@ -232,6 +236,7 @@
                 <a href="CareerExploration.html" class="file-link"><div class="file-name">Career Exploration</div><div class="file-desc">Career Path Explorer</div></a>
                 <a href="careerplanner.html" class="file-link"><div class="file-name">Career Planner</div><div class="file-desc">Career Planning Tool</div></a>
                 <a href="costar.html" class="file-link"><div class="file-name">COSTAR Method</div><div class="file-desc">Interview Technique</div></a>
+               <a href="fire.html" class="file-link"><div class="file-name">Fire Safety</div><div class="file-desc">Electrical Fire Safety</div></a>
                 <a href="gaap.html" class="file-link"><div class="file-name">GAAP</div><div class="file-desc">Accounting Principles</div></a>
                 <a href="teamproject.html" class="file-link"><div class="file-name">Team Project</div><div class="file-desc">Collaborative Projects</div></a>
             </div>
