Update educational tools and add new links
Added links for Flashcards, Rubric Generator, and Survey Tool. Removed sections for Educational Tools and Miscellaneous Resources.

--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
                 <a href="hamlet.html" class="file-link"><div class="file-name">Hamlet Study</div><div class="file-desc">Shakespeare's Hamlet</div></a>
                 <a href="hamletchrono.html" class="file-link"><div class="file-name">Hamlet Chronology</div><div class="file-desc">Character Relationships</div></a>
                 <a href="hamlet.png" class="file-link"><div class="file-name">Hamlet Image</div><div class="file-desc">Hamlet Diagram</div></a>
+                <a href="nounsverbs.html.png" class="file-link"><div class="file-name">Types of Nouns and Verbs</div><div class="file-desc">Noun Verb Challenge</div></a>
                 <a href="philosopherguide.html" class="file-link"><div class="file-name">Philosophy Guide</div><div class="file-desc">Philosophers Reference</div></a>
                 <a href="sentencediagram.html" class="file-link"><div class="file-name">Sentence Diagram</div><div class="file-desc">Interactive Diagrammer</div></a>
             </div>
@@ -273,23 +274,11 @@
             <h2>🤖 AI & Productivity Tools</h2>
             <div class="file-grid">
                 <a href="claudenav.html" class="file-link"><div class="file-name">Claude Navigation</div><div class="file-desc">Claude AI Helper</div></a>
-                <a href="Perplexity.html" class="file-link"><div class="file-name">Perplexity</div><div class="file-desc">Perplexity AI Guide</div></a>
-            </div>
-        </div>
-
-        <div class="section">
-            <h2>🎯 Educational Tools & Utilities</h2>
-            <div class="file-grid">
-                <a href="flashcard.html" class="file-link"><div class="file-name">Flashcards</div><div class="file-desc">Study Flashcard System</div></a>
+                 <a href="flashcard.html" class="file-link"><div class="file-name">Flashcards</div><div class="file-desc">Study Flashcard System</div></a>
                 <a href="rubric.html" class="file-link"><div class="file-name">Rubric Generator</div><div class="file-desc">Assessment Rubrics</div></a>
-                <a href="survey.html" class="file-link"><div class="file-name">Survey Tool</div><div class="file-desc">Survey Creation</div></a>     
-            </div>
-        </div>
-
-        <div class="section">
-            <h2>🔧 Miscellaneous Resources</h2>
-            <div class="file-grid">
-               <a href="bio.html" class="file-link"><div class="file-name">Instructor Profile</div><div class="file-desc">Instructor Profile</div></a> 
+                <a href="bio.html" class="file-link"><div class="file-name">Instructor Profile</div><div class="file-desc">Instructor Profile</div></a> 
+                <a href="survey.html" class="file-link"><div class="file-name">Survey Tool</div><div class="file-desc">Survey Creation</div></a>
+                <a href="Perplexity.html" class="file-link"><div class="file-name">Perplexity</div><div class="file-desc">Perplexity AI Guide</div></a>
             </div>
         </div>
 
