--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <a href="hamlet.html" class="file-link"><div class="file-name">Hamlet Study</div><div class="file-desc">Shakespeare's Hamlet</div></a>
                 <a href="hamletchrono.html" class="file-link"><div class="file-name">Hamlet Chronology</div><div class="file-desc">Character Relationships</div></a>
                 <a href="hamlet.png" class="file-link"><div class="file-name">Hamlet Image</div><div class="file-desc">Hamlet Diagram</div></a>
-                <a href="nounsverbs.html.png" class="file-link"><div class="file-name">Types of Nouns and Verbs</div><div class="file-desc">Noun Verb Challenge</div></a>
+                <a href="nounsverbs.html" class="file-link"><div class="file-name">Types of Nouns and Verbs</div><div class="file-desc">Noun Verb Challenge</div></a>
                 <a href="philosopherguide.html" class="file-link"><div class="file-name">Philosophy Guide</div><div class="file-desc">Philosophers Reference</div></a>
                 <a href="sentencediagram.html" class="file-link"><div class="file-name">Sentence Diagram</div><div class="file-desc">Interactive Diagrammer</div></a>
             </div>
